JT02 - Correção de insconsistencias na API - Release01