@@ -1,13 +1,15 @@
 package br.app.veiculos.service;
 
-import br.app.veiculos.dto.*;
-import br.app.veiculos.entity.Pneu;
+import br.app.veiculos.dto.PneuAplicadoResponse;
+import br.app.veiculos.dto.VeiculoDetalheResponse;
+import br.app.veiculos.dto.VeiculoRequest;
+import br.app.veiculos.dto.VeiculoResponse;
 import br.app.veiculos.entity.Veiculo;
-import br.app.veiculos.entity.VeiculoPneu;
 import br.app.veiculos.exception.RecursoNaoEncontradoException;
 import br.app.veiculos.exception.RegraNegocioException;
-import br.app.veiculos.repository.VeiculoPneuRepository;
+import br.app.veiculos.mapper.VeiculoMapper;
 import br.app.veiculos.repository.VeiculoRepository;
+import br.app.veiculos.repository.VinculoRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -20,27 +22,28 @@ import java.util.stream.Collectors;
 public class VeiculoService {
 
 	private final VeiculoRepository veiculoRepository;
-	private final VeiculoPneuRepository veiculoPneuRepository;
-
-	public List<VeiculoResumoResponse> listarSemPneus() {
+	private final VinculoRepository vinculoRepository;
+	private final VeiculoMapper veiculoMapper;
+//Requisito 1 - lista todos os veiculos sem pneus
+	public List<VeiculoResponse> listarSemPneus() {
 		return veiculoRepository.findAll().stream()
-				.map(this::toResumo)
+				.map(veiculoMapper::toVeiculoResponse)
 				.collect(Collectors.toList());
 	}
-
+//Requisito 2 - busca um veiculo com pneu e posição
 	@Transactional(readOnly = true)
 	public VeiculoDetalheResponse buscarComPneus(Long id) {
-		Veiculo veiculo = veiculoRepository.findById(id)
+		Veiculo veiculo = vinculoRepository.findVeiculoPneuPosicao(id)
 				.orElseThrow(() -> new RecursoNaoEncontradoException("Veículo não encontrado"));
-		List<VeiculoPneu> vinculos = veiculoPneuRepository.findAtivosComPneuByVeiculoId(id);
-		List<PneuAplicadoResponse> pneus = vinculos.stream()
-				.map(this::toPneuAplicado)
-				.collect(Collectors.toList());
-		return toDetalhe(veiculo, pneus);
+		List<PneuAplicadoResponse> pneus = veiculo.getAplicacoes().stream()
+				.filter(vp -> vp.getDataDesvinculo() == null)
+				.map(veiculoMapper::toPneuAplicado)
+				.toList();
+		return veiculoMapper.toDetalhe(veiculo, pneus);
 	}
-
+//Requisito 3 - cria um veiculo
 	@Transactional
-	public VeiculoResumoResponse criar(VeiculoRequest request) {
+	public VeiculoResponse criar(VeiculoRequest request) {
 		String placa = normalizarPlaca(request.getPlaca());
 		if (veiculoRepository.existsByPlacaIgnoreCase(placa)) {
 			throw new RegraNegocioException("Já existe veículo com esta placa.");
@@ -51,45 +54,7 @@ public class VeiculoService {
 		v.setQuilometragemKm(request.getQuilometragemKm());
 		v.setStatus(request.getStatus().trim().toUpperCase());
 		v = veiculoRepository.save(v);
-		return toResumo(v);
-	}
-
-	private VeiculoResumoResponse toResumo(Veiculo v) {
-		return VeiculoResumoResponse.builder()
-				.id(v.getId())
-				.placa(v.getPlaca())
-				.marca(v.getMarca())
-				.quilometragemKm(v.getQuilometragemKm())
-				.status(v.getStatus())
-				.createdAt(v.getCreatedAt())
-				.updatedAt(v.getUpdatedAt())
-				.build();
-	}
-
-	private VeiculoDetalheResponse toDetalhe(Veiculo v, List<PneuAplicadoResponse> pneus) {
-		return VeiculoDetalheResponse.builder()
-				.id(v.getId())
-				.placa(v.getPlaca())
-				.marca(v.getMarca())
-				.quilometragemKm(v.getQuilometragemKm())
-				.status(v.getStatus())
-				.createdAt(v.getCreatedAt())
-				.updatedAt(v.getUpdatedAt())
-				.pneusAplicados(pneus)
-				.build();
-	}
-
-	private PneuAplicadoResponse toPneuAplicado(VeiculoPneu vp) {
-		Pneu p = vp.getPneu();
-		return PneuAplicadoResponse.builder()
-				.pneuId(p.getId())
-				.numeroFogo(p.getNumeroFogo())
-				.marca(p.getMarca())
-				.pressaoAtualPsi(p.getPressaoAtualPsi())
-				.status(p.getStatus())
-				.posicao(vp.getPosicao())
-				.dataVinculo(vp.getDataVinculo())
-				.build();
+		return veiculoMapper.toVeiculoResponse(v);
 	}
 
 	private static String normalizarPlaca(String placa) {
